--- a/dashboard.html
+++ b/dashboard.html
@@ -52,6 +52,30 @@
                 <span class="flex-1 ms-3 whitespace-nowrap">Color</span>
              </a>
           </li>
+          <li>
+            <a href="#ui/ux" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+               <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
+                  <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
+               </svg>
+               <span class="flex-1 ms-3 whitespace-nowrap">UX/UI Design</span>
+            </a>
+         </li>
+         <li>
+            <a href="#version-control" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+               <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
+                  <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
+               </svg>
+               <span class="flex-1 ms-3 whitespace-nowrap">Version Control</span>
+            </a>
+         </li>
+         <li>
+            <a href="#hosting" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+               <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
+                  <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
+               </svg>
+               <span class="flex-1 ms-3 whitespace-nowrap">Free Hosting</span>
+            </a>
+         </li>
         
           <li>
              <a href="index.html" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
@@ -192,6 +216,101 @@
         </div>
     </div>
 
+</section>
+<section class="p-4 sm:ml-64" id="ui/ux">
+    <div class="image-title">
+        <h1 class="mb-2 font-extrabold leading-none tracking-tight text-gray-900 dark:text-white uppercase">UI/UX Design</h1>
+    </div>
+
+    <div class="useful-tools-header">
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Figma</h1>
+            <img src="./image/figma.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2">Figma helps design and development teams build great products, together</p>
+            <div class="link items-center">
+                <a href="https://www.figma.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2">Sketch</h1>
+            <img src="./image/sketch.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Discover intuitive tools for digital sketching, wireframing, and prototyping. Whether you're an artist, designer, or developer, unleash your ideas with ease and precision.</p>
+            <div class="link items-center">
+                <a href="https://www.sketch.com/?ref=inspectresource.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2">Uiverse.io</h1>
+            <img src="./image/ui.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Discover a wealth of resources, from sleek templates to insightful articles, tailored to elevate your user interface creations.</p>
+            <div class="link items-center">
+                <a href="https://www.sketch.com/?ref=inspectresource.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="p-4 sm:ml-64" id="version-control">
+    <div class="image-title">
+        <h1 class="mb-2 font-extrabold leading-none tracking-tight text-gray-900 dark:text-white uppercase">Version Control</h1>
+    </div>
+
+    <div class="useful-tools-header">
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Github</h1>
+            <img src="./image/github.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2">GitHub is the world's leading platform for version control and collaboration on software development projects.</p>
+            <div class="link items-center">
+                <a href="https://github.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>   
+        
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Git</h1>
+            <img src="./image/git.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
+            <div class="link items-center">
+                <a href="https://git-scm.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>   
+    </div>  
+</section>
+ 
+<section class="p-4 sm:ml-64" id="hosting">
+    <div class="image-title">
+        <h1 class="mb-2 font-extrabold leading-none tracking-tight text-gray-900 dark:text-white uppercase">Free Hosting website</h1>
+    </div>
+
+    <div class="useful-tools-header">
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Render</h1>
+            <img src="./image/render.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Build, deploy, and scale your apps with unparalleled ease – from your first user to your billionth.</p>
+            <div class="link items-center">
+                <a href="https://render.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Vercel</h1>
+            <img src="./image/vercel.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Vercel provides the developer tools and cloud infrastructure to build, scale, and secure a faster, more personalized web.</p>
+            <div class="link items-center">
+                <a href="https://vercel.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2"> Netlify</h1>
+            <img src="./image/netlify.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Netlify is the essential platform for the delivery of exceptional and dynamic web experiences, without limitations.</p>
+            <div class="link items-center">
+                <a href="https://vercel.com" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+    </div>  
 
 </section>
 
