--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="message">
       <div class="message-content">
-        <p class="text-gray-700 font-semibold"> I totally believe in you, Mj Vinculado. Your devotion, curiosity, and determination motivate me every day. This website is my way of encouraging you to pursue your aspirations in frontend development. You have the creativity, intelligence, and resilience to excel in this industry; never doubt it. Keep learning and growing, and know that I'm here to support you every step of the way.</p>
+        <p class="text-gray-700 font-semibold"> I totally believe in you love. Your devotion, curiosity, and determination motivate me every day. This website is my way of encouraging you to pursue your aspirations in frontend development. You have the creativity, intelligence, and resilience to excel in this industry; never doubt it. Keep learning and growing, and know that I'm here to support you every step of the way.</p>
       </div>
     </div>
 
