--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/style/dashboard.css">
-    <title>Document</title>
+    <title>Useful Tools</title>
 </head>
 <body>
 <button data-drawer-target="sidebar-multi-level-sidebar" data-drawer-toggle="sidebar-multi-level-sidebar" aria-controls="sidebar-multi-level-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
@@ -81,6 +81,14 @@
                   <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
                </svg>
                <span class="flex-1 ms-3 whitespace-nowrap">Waves Generator</span>
+            </a>
+         </li>
+         <li>
+            <a href="#flowchart" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+               <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
+                  <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
+               </svg>
+               <span class="flex-1 ms-3 whitespace-nowrap">Flowchart</span>
             </a>
          </li>
         
@@ -360,6 +368,33 @@
             <p class="text-gray-700 dark:text-white mt-2"> SVG Wave is a minimal svg wave generator with lot of customization. It lets you abiltiy to generate and export pngs and svgs of beautiful waves.</p>
             <div class="link items-center">
                 <a href="https://svgwave.in" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+    </div>
+
+
+</section>
+
+<section class="p-4 sm:ml-64" id="flowchart">
+    <div class="image-title">
+        <h1 class="mb-2 font-extrabold leading-none tracking-tight text-gray-900 dark:text-white uppercase">FLOWCHART</h1>
+    </div>
+
+    <div class="useful-tools-header">
+        <div class="useful-tools-content">
+            <h1 class="text-gray-900 dark:text-white mb-2">Draw.io</h1>
+            <img src="./image/draw.png" alt="">
+            <p class="text-gray-700 dark:text-white mt-2"> Draw.io (now known as diagrams.net) is a free online diagramming tool that allows users to create a wide variety of diagrams, including flowcharts, UML diagrams, network diagrams, organizational charts, mind maps, and more. </p>
+            <div class="link items-center">
+                <a href="https://app.diagrams.net" target="_blank"><h1 class="view text-blue-500">View</h1></a>
+            </div>
+        </div>
+          <div class="useful-tools-content">
+                <h1 class="text-gray-900 dark:text-white mb-2">Boardmix</h1>
+                <img src="./image/draw.png" alt="">
+                <p class="text-gray-700 dark:text-white mt-2"> Boardmix is the ultimate AI-powered platform for flowchart creation. With various free templates, you can map out workflows and routines with lightning speed! </p>
+                <div class="link items-center">
+                    <a href="https://boardmix.com/ai-flowchart/?utm_source=google&utm_medium=cpc&utm_term=ai-flowchart&_channel_track_key=LqEFwqfj&gad_source=1&gclid=Cj0KCQjw6oi4BhD1ARIsAL6pox3i5Y37VUbtRBcuFDSMNpT29AChAmtnCp2_ImRpDbrWFTzC23GtdecaAv9QEALw_wcB" target="_blank"><h1 class="view text-blue-500">View</h1></a>
             </div>
         </div>
     </div>
